syntax = "proto3";


package workflows.v1;

option go_package = "github.com/DaDevFox/task-systems/workflows/pkg/proto/workflows/v1";

service WorkflowsService {
  rpc MarkTaskComplete(MarkTaskRequest) returns (MarkTaskResponse);
  rpc MarkReviewComplete(MarkReviewRequest) returns (MarkReviewResponse);
  rpc AddPileValue(AddPileRequest) returns (AddPileResponse);
  rpc GetLeaderboard(LeaderboardRequest) returns (LeaderboardResponse);
}

message MarkTaskRequest {
  string task = 1;
  string user = 2;
}
message MarkTaskResponse {}

message MarkReviewRequest {
  string task = 1;
  string reviewer = 2;
}
message MarkReviewResponse {}

message AddPileRequest {
  string pile_id = 1;
  int32 delta = 2;
}
message AddPileResponse {}

message LeaderboardRequest {}
message LeaderboardResponse {
  repeated LeaderboardEntry entries = 1;
}
message LeaderboardEntry {
  string user = 1;
  int32 completed = 2;
  int32 on_time = 3;
  float avg_efficiency = 4;
}

